# python-odyssey.github.io

./: 404.html  CNAME  LICENSE  Makefile  README.md  archives.html  authors.html  categories.html  example-article.html  index.html  other-article.html  pelicanconf.py  publishconf.py  pyproject.toml  second-example-article.html  second-other-article.html  tags.html  tasks.py
author/: justin-sharma.html
category/: example.html  other.html
content/: example-article.md  other-article.md  second-example-article.md  second-other-article.md
content/extra/: CNAME
content/pages/: 404.md
feeds/: all.atom.xml  example.atom.xml  other.atom.xml
