[tool.poetry]
name = "python-odyssey.github.io"
version = "1.0.0"
description = "Organization level site"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pelican = "^4.6.0"
markdown = "^3.3.4"
ghp-import = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
